Add and delete dream
