# src/API/BlazoredDreams.Core/BlazoredDreams.Application/Dreams/Models/DreamDto.cs
@@ -6,5 +6,6 @@ namespace BlazoredDreams.Application.Dreams.Models
 		public string Username { get; set; }
 		public string Content { get; set; }
 		public string Date { get; set; }
+		public bool IsPublished { get; set; }
 	}
 }
